-Improvement: Added IRoleDefaultRoleStore and IRoleColorStore and their imeplementation. -Improvement: Stored the role color as int for simpler parsing. .Improvement: SchulCloudUserManager exported in a new assembly for more modular use. -Improvement: Used a global using declaration to define the user and role type for the application. -Style: Fixed display of the recovery code badge if 2fa isn't enabled.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
@@ -106,15 +106,18 @@
                             <TitleTemplate>
                                 <SecurityMethodItemTitle IconName="pin" Title="@Localizer["mfa_Recovery"]" Enabled="@(_mfaEnabled ? (_mfaRemainingRecoveryCodes > 0) : null)">
                                     <AdditionalBadges>
-                                        @if (_mfaRemainingRecoveryCodes > 0)
+                                        @if (_mfaEnabled)
                                         {
-                                            <Badge Class="ms-2" Color="BadgeColor.Info">@Localizer["recovery_ValidCodes", _mfaRemainingRecoveryCodes]</Badge>
-                                        }
-                                        else
-                                        {
-                                            <Tooltip Title="@Localizer["recovery_NoValidCodes_Tooltip"]" Placement="TooltipPlacement.Right">
-                                                <Badge Class="ms-2" Color="BadgeColor.Warning">@Localizer["recovery_NoValidCodes"]</Badge>
-                                            </Tooltip>
+                                            @if (_mfaRemainingRecoveryCodes > 0)
+                                            {
+                                                <Badge Class="ms-2" Color="BadgeColor.Info">@Localizer["recovery_ValidCodes", _mfaRemainingRecoveryCodes]</Badge>
+                                            }
+                                            else
+                                            {
+                                                <Tooltip Title="@Localizer["recovery_NoValidCodes_Tooltip"]" Placement="TooltipPlacement.Right">
+                                                    <Badge Class="ms-2" Color="BadgeColor.Warning">@Localizer["recovery_NoValidCodes"]</Badge>
+                                                </Tooltip>
+                                            }
                                         }
                                     </AdditionalBadges>
                                 </SecurityMethodItemTitle>
