--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Error/NotFound.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Error/NotFound.razor
@@ -1,10 +1,3 @@
-﻿@using Microsoft.AspNetCore.Authorization
-@using SchulCloud.Web.Utils.Interfaces
-
-@page "/error/404"
-
-@attribute [AllowAnonymous]
-
-<SchulCloudPageTitle Title="Not Found" />
+﻿<SchulCloudPageTitle Title="Not Found" />
 
 <h3>Error: 404</h3>
