FIDO2 Credential management -Feature: Added a page to add, view and remove fido2 credentials. -Feature: Added TS namespace and functions for webauthn and a correspondig .NET service. -Feature: Added some missing methods for fido2 credential interaction to SchulCloudUserManager and used options to provide some settings. -Feature: Added some dialogs that may get more use in future.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Account/SecurityMethodItemTitle.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Account/SecurityMethodItemTitle.razor
@@ -1,5 +1,6 @@
 ﻿@using Humanizer
 @using System.Globalization
+@using SchulCloud.Web.Extensions
 
 <div class="d-flex justify-content-between align-items-center flex-fill">
     <div class="d-flex align-items-center">
@@ -30,7 +31,7 @@
         {
             string value = (DateTime.UtcNow - LastTimeUsed).Value.Days <= 7
                 ? LastTimeUsed.Humanize()
-                : LastTimeUsed.Value.ToString("d", CultureInfo.CurrentCulture);
+                : LastTimeUsed.Value.ToDisplayedString();
             @Localizer["usedLast", value]
         }
     </span>
