--- a/SchulCloud.Web/SchulCloud.Web/Components/Layouts/AccountSecurityLayout.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Layouts/AccountSecurityLayout.razor
@@ -11,6 +11,9 @@
             <li class="nav-item">
                 <NavLink class="nav-link" href="@Routes.SecurityIndex()" Match="NavLinkMatch.All">@Localizer["tabOverview"]</NavLink>
             </li>
+            <li class="nav-item">
+                <NavLink class="nav-link" href="@Routes.SecurityKeys()">@Localizer["tabSecurityKeys"]</NavLink>
+            </li>
         </ul>
 
         @Body
