--- a/SchulCloud.Web/SchulCloud.Web/Components/_Imports.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/_Imports.razor
@@ -11,6 +11,7 @@
 @using SchulCloud.Web.Client
 @using SchulCloud.Web.Components
 @using SchulCloud.Web.Components.Google
+@using SchulCloud.Web.Components.Dialogs
 @using SchulCloud.Web.Components.Bootstrap.Forms
 @using SchulCloud.Web.Components.Forms.Validation
 @using SchulCloud.Web.Components.Bootstrap.Validation
