General improvements -Feature: Added PasskeysEnabled to user model in preparation for passkey auth. -Improvement: Replaced the authenticator disable modal with the RemoveDialog. -Improvement: Rename IsUsernameless to IsPasskey. -Improvement: Added the mime type to the file download. -Style: Removed the too many success toast. -Fix: Fixed spelling mistake on manage security key page. -Chore: Updated NuGet packages.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
@@ -19,7 +19,6 @@
                     }
                     return null;
                 }
-
                 PasswordOptions options = PasswordOptionsAccessor.Value;
             }
 
@@ -57,13 +56,6 @@
             {
                 <Button Color="ButtonColor.Danger" @onclick="AuthenticatorDisable_ClickAsync">@Localizer["authenticator_Disable"]</Button>
             }
-
-            <Modal @ref="AuthenticatorDisableModal" Title="@Localizer["authenticator_Disable"]" Message="@Localizer["authenticator_DisableMessage"]">
-                <FooterTemplate>
-                    <Button Color="ButtonColor.Secondary" @onclick="AuthenticatorDisableAbort_ClickAsync">@Localizer["authenticator_DisableAbortBtn"]</Button>
-                    <Button Class="ms-2" Color="ButtonColor.Danger" @onclick="AuthenticatorDisableExecute_ClickAsync">@Localizer["authenticator_DisableExecuteBtn"]</Button>
-                </FooterTemplate>
-            </Modal>
         </Content>
     </AccordionItem>
     <AccordionItem>
@@ -133,3 +125,5 @@
         </Content>
     </AccordionItem>
 </Accordion>
+
+<RemoveDialog @ref="_removeDialog" />
