FIDO2 2FA Authentication -Feature: Added security key 2fa verification to Verify2fa page. -Feature: Added the IUserTwoFactorSecurityKeyStore, the implementation and it SchulCloudUserManager methods. -Feature: Added 2FA via security keys to security manage page. -Improvement: Change JS interop prefix from __schulCloudJS to _schulCloud. -Fix: Fixed an error that occurre if userHandle is empty. -Fix: Fixed an error that fido2 cred's pdks are requested by UserId instead of their Id.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/SecurityKeys.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/SecurityKeys.razor
@@ -6,7 +6,7 @@
 <p class="mt-2">@Localizer["desc"]</p>
 <p>@Localizer["desc_passkey"]</p>
 
-<Accordion>
+<Accordion Class="mb-2">
     @if (_securityKeys is not null)
     {
         @foreach (SecurityKey securityKey in _securityKeys.OrderByDescending(key => key.RegistrationDate))
@@ -80,14 +80,18 @@
         <span>@Localizer["loading"]</span>
     }
 </Accordion>
-@if (_browserSupported)
+
+@if (_webAuthnSupported)
 {
-    <Button Class="mt-2" Color="ButtonColor.Primary" Size="ButtonSize.Small" @onclick="RegisterSecurityKey_ClickAsync">@Localizer["registerBtn"]</Button>
+    <Button Color="ButtonColor.Primary" Size="ButtonSize.Small" @onclick="RegisterSecurityKey_ClickAsync">@Localizer["registerBtn"]</Button>
 }
 else
 {
-    <Tooltip Title="@Localizer["browserNotSupported"]">
-        <Button Class="mt-2" Color="ButtonColor.Primary" Size="ButtonSize.Small" Disabled>@Localizer["registerBtn"]</Button>
+    <Tooltip Class="d-flex" Title="@Localizer["browserNotSupported"]">
+        <Button Class="flex-fill d-flex flex-nowrap justify-content-center" Color="ButtonColor.Primary" Size="ButtonSize.Small" Disabled>
+            <span>@Localizer["registerBtn"]</span>
+            <Icon Class="ms-2" Name="IconName.ExclamationCircle" />
+        </Button>
     </Tooltip>
 }
 
